# rl-local-path-planning

./: .gitattributes  .gitignore  README.md  requirements.txt
creating unstructured environments/: .gitignore  README.md  pyproject.toml
creating unstructured environments/datasets/: README.md  sample_generated_scenarios.json
creating unstructured environments/tests/: __init__.py  test_platform_smoke.py
creating unstructured environments/unstructured_traffic_rl/: __init__.py
creating unstructured environments/unstructured_traffic_rl/env/: __init__.py  actions.py  core.py  observations.py
creating unstructured environments/unstructured_traffic_rl/hazards/: entities.py
creating unstructured environments/unstructured_traffic_rl/rendering/: __init__.py  overlay.py
creating unstructured environments/unstructured_traffic_rl/scenarios/: __init__.py  generator.py  presets.py
creating unstructured environments/unstructured_traffic_rl/traffic_models/: __init__.py  profiles.py  vehicles.py
creating unstructured environments/unstructured_traffic_rl/training/: __init__.py  demo.py  sb3_train.py  scenario_batch.py
creating unstructured environments/unstructured_traffic_rl/utils/: seed.py
high-level path planning/: README.md
high-level path planning/experiments/: ppo_study_report.md
high-level path planning/models/: exp4_dqn_cnn.pt  (+1 more)
models/: exp4_dqn_cnn.pt
src/: dynamic_obstacle_v_cnst.py  exp4_cnn_dqn_dynamic.py  static_obstacle_avoidance.py  test_corridor.py
unstructured_scen_codes/: elurant_dqn.py  erratic_drivers_dqn.py  erratic_drivers_env.py  test.py
(+137 files in other folders)
